intellij-ce-bin: add aarch64 support.